--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="plateforme de ecommerce, de reservation d'hebergement, de restauration, et de tranport"
     />
-    <link rel="shortcut icon" href="../src/Assets/Images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <title>YAL NGUEMBU</title>
   </head>
   <body>
